# instant-distance

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  rust.yml
benches/: all.rs
distance-metrics/: Cargo.toml
distance-metrics/benches/: all.rs
distance-metrics/src/: lib.rs  simd_avx.rs  simd_neon.rs  simd_sse.rs
instant-distance/: Cargo.toml
instant-distance-py/: Cargo.toml  pyproject.toml
instant-distance-py/benches/: all.rs
instant-distance-py/examples/: perf-fasttext.rs
instant-distance-py/examples/translations/: README.md  build_index.py  pyproject.toml  requirements.txt  translate.py
instant-distance-py/python/instant_distance/: __init__.py
instant-distance-py/src/: lib.rs
instant-distance-py/test/: test.py
instant-distance/benches/: all.rs
instant-distance/examples/: colors.rs
instant-distance/src/: contiguous.rs  lib.rs  simd.rs  types.rs
instant-distance/tests/: all.rs
src/: lib.rs  types.rs
tests/: all.rs
