[package]
name = "instant-distance"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
edition = "2018"

[features]
with-serde = ["serde", "serde-big-array"]

[dependencies]
ahash = "0.6.1"
indicatif = { version = "0.15", optional = true }
num_cpus = "1.13"
ordered-float = "2.0"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.5"
serde = { version = "1.0.118", features = ["derive"], optional = true }
serde-big-array = { version = "0.3.1", optional = true }
