[package]
name = "instant-distance-py"
version = "0.3.5"
edition = "2021"
rust-version = "1.58"
license = "MIT OR Apache-2.0"
workspace = ".."
description = "Fast minimal implementation of HNSW maps for approximate nearest neighbors searches"
homepage = "https://github.com/InstantDomain/instant-distance"
repository = "https://github.com/InstantDomain/instant-distance"
readme = "../README.md"

[lib]
name = "instant_distance_py"
crate-type = ["cdylib", "lib"]

[package.metadata.maturin]
name = "instant_distance"

[dependencies]
bincode = "1.3.1"
instant-distance = { version = "0.6", path = "../instant-distance", features = ["with-serde"] }
pyo3 = { version = "0.18.0", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5.0"

[dev-dependencies]
bencher = "0.1.5"
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "all"
harness = false
