[package]
name = "instant-distance"
version = "0.6.1"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85"
description = "Fast minimal implementation of HNSW maps for approximate nearest neighbors searches"
homepage = "https://github.com/InstantDomain/instant-distance"
repository = "https://github.com/InstantDomain/instant-distance"
documentation = "https://docs.rs/instant-distance"
workspace = ".."
readme = "../README.md"

[features]
with-serde = ["serde", "serde-big-array"]

[dependencies]
indicatif = { version = "0.18", optional = true }
num_cpus = "1.13"
ordered-float = "5.0"
parking_lot = "0.12"
rand = "0.10"
rayon = "1.5"
serde = { version = "1.0.118", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.0", optional = true }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "all"
harness = false
